#15813 closed bug (fixed)
Rightmost pixel of Leaf menu ignores click
Reported by: | humdinger | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Applications/Deskbar | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev53976.
If you move the mouse to right screenedge (but avoid the top screenedge), a click on the Leaf menu doesn't produce the Deskbar menu. You have to move the mouse 1 pixel to the left.
If you position the Deskbar in the top left corner, this 'dead' area will still be on the right edge of the Deskbar, though it's 2 pixels wide now.
Change History (5)
comment:1 by , 5 years ago
Summary: | Leftmost pixel of Leaf menu ignores click → Rightmost pixel of Leaf menu ignores click |
---|
comment:2 by , 5 years ago
comment:4 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Was merged with hrev53992. Thanks very much!
comment:5 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
I can reproduce this bug. Leaf button width is less than it should be. Probably regression after hrev53955.