src/apps/deskbar/BarMenuBar.cpp
@@ -156,16 +156,14 @@ TBarMenuBar::SmartResize(float width, float height)
 	} else
 		ResizeTo(width, height);
 
-	width -= 1;
-
 	if (fSeparatorItem != NULL)
 		fDeskbarMenuItem->SetContentSize(width - kSepItemWidth, height);
 	else {
 		int32 count = CountItems();
-		if (fDeskbarMenuItem)
-			fDeskbarMenuItem->SetContentSize(width / count, height);
-		if (fAppListMenuItem)
-			fAppListMenuItem->SetContentSize(width / count, height);
+		if (fDeskbarMenuItem != NULL)
+			fDeskbarMenuItem->SetContentSize(floorf(width / count), height);
+		if (fAppListMenuItem != NULL)
+			fAppListMenuItem->SetContentSize(floorf(width / count), height);
 	}
 
 	InvalidateLayout();
